--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,25 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-plugins {
-    id 'com.android.application' version '7.1.1' apply false
-    id 'com.android.library' version '7.1.1' apply false
-}
+buildscript {
+    ext {
+        kotlin_version = '1.6.10'
+        compose_version = '1.0.5'
+    }
+    repositories {
+        google()
+        maven { url "https://jitpack.io"
+        }
+        mavenCentral()
+
+    }
+    dependencies {
+        classpath 'com.google.gms:google-services:4.3.13'
+        classpath "com.android.tools.build:gradle:7.1.1"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"    }
+}// Top-level build file where you can add configuration options common to all sub-projects/modules.
+//plugins {
+//    id 'com.android.application' version '7.2.0' apply false
+//    id 'com.android.library' version '7.2.0' apply false
+//}
 
 task clean(type: Delete) {
     delete rootProject.buildDir
