--- a/settings.gradle
+++ b/settings.gradle
@@ -1,15 +1,18 @@
-pluginManagement {
-    repositories {
-        gradlePluginPortal()
-        google()
-        mavenCentral()
-    }
-}
+//pluginManagement {
+//    repositories {
+//        gradlePluginPortal()
+//        google()
+//        mavenCentral()
+//    }
+//}
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
         google()
+        maven { url "https://jitpack.io" }
         mavenCentral()
+        jcenter() // Warning: this repository is going to shut down soon
+
     }
 }
 rootProject.name = "Esamudaay"
