--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,5 +49,6 @@ dependencies {
     implementation "androidx.core:core-ktx:1.0.1"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.github.bumptech.glide:glide:4.13.2'
+    implementation 'com.github.smarteist:autoimageslider:1.4.0'
 
 }
