--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,5 +50,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.github.bumptech.glide:glide:4.13.2'
     implementation 'com.github.smarteist:autoimageslider:1.4.0'
-
+    implementation 'com.github.blackfizz:eazegraph:1.2.5l@aar'
+    implementation 'com.nineoldandroids:library:2.4.0'
 }
+
