--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,6 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.13.2'
     implementation 'com.github.smarteist:autoimageslider:1.4.0'
     implementation 'com.github.blackfizz:eazegraph:1.2.5l@aar'
-    implementation 'com.nineoldandroids:library:2.4.0'
+    implementation 'com.google.code.gson:gson:2.9.0'
 }
 
