--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,5 +52,9 @@ dependencies {
     implementation 'com.github.smarteist:autoimageslider:1.4.0'
     implementation 'com.github.blackfizz:eazegraph:1.2.5l@aar'
     implementation 'com.google.code.gson:gson:2.9.0'
+    implementation 'com.nineoldandroids:library:2.4.0'
+
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
+
 }
 
